# cmake-learning

cmake tutorial/: CMakeLists.txt  CTestConfig.cmake  main.cpp
cmake tutorial/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmake tutorial/step 1 - a basic starting point/exercise 1 - building a basic project/: CMakeLists.txt  main.cpp
cmake tutorial/step 1 - a basic starting point/exercise 2 - specifying the c++ standard/: CMakeLists.txt  main.cpp
cmake tutorial/step 1 - a basic starting point/exercise 3 - adding a version number and configured header file/: CMakeLists.txt  TutorialConfig.h.in  main.cpp
